--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <script src="js/ionic.bundle.min.js"></script>
     <script src="js/my.js"></script>
+    <script src="js/service.js"></script>
   </head>
 
   <body>
