--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <link href="css/ionic.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/ionic.app.min.css"/>
+    <link href="http://www.runoob.com/static/ionic/css/ionicons.min.css" />
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <script src="js/ionic.bundle.min.js"></script>
     <script src="js/my.js"></script>
   </head>
 
   <body>
-
              
     <ion-nav-view></ion-nav-view>
-
   </body>
 </html>
