--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
   <body>
 
-  <ion-nav-bar align-title="center" class="bar-positive">
-    <ion-nav-back-button class="button-clear">
-      <i class="ion-arrow-left-c"></i>后退
-    </ion-nav-back-button>
+  <ion-nav-bar align-title="center" class="bar-positive nav-title-slide-ios7">
+
+      <ion-nav-back-button class="button-clear">
+        <i class="ion-arrow-left-c"></i>Back
+      </ion-nav-back-button>
+
   </ion-nav-bar>
 
     <ion-nav-view></ion-nav-view>
