--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,11 @@
 
   <body>
 
-  <ion-nav-bar align-title="center" class="bar-positive nav-title-slide-ios7">
-
-      <ion-nav-back-button class="button-clear">
-        <i class="ion-arrow-left-c"></i>Back
-      </ion-nav-back-button>
-
+  <ion-nav-bar class="bar-positive">
+    <ion-nav-back-button class="button-icon ion-arrow-left-c">
+    </ion-nav-back-button>
   </ion-nav-bar>
 
-    <ion-nav-view></ion-nav-view>
-
+  <ion-nav-view></ion-nav-view>
   </body>
 </html>
