--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,8 @@
     <link href="css/ionic.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/ionic.app.min.css"/>
-    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+    <link href="css/flex.sass" rel="stylesheet">
+    <link href="css/ionicons.min.css" />
     <script src="js/ionic.bundle.min.js"></script>
     <script src="js/my.js"></script>
     <script src="js/service.js"></script>
