--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
   <body>
 
   <ion-nav-bar class="bar-positive">
-    <ion-nav-back-button class="button-icon ion-arrow-left-c">
+    <ion-nav-back-button class="icon ion-arrow-left-c">
     </ion-nav-back-button>
   </ion-nav-bar>
 
