继续修改app文件结构,并将大量的contoller层代码重写到service层

--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
       <script src="js/controller/controller.js"></script>
       <script src="js/route/route.js"></script>
       <script src="js/service/service.js"></script>
+    <script src="js/service/tool.js"></script>
   </head>
 
   <body>
