--- a/www/index.html
+++ b/www/index.html
@@ -21,8 +21,8 @@
 
   <body>
 
-  <ion-nav-bar class="bar-positive">
-    <ion-nav-back-button class="icon ion-arrow-left-c">
+  <ion-nav-bar class=" bar-dark">
+    <ion-nav-back-button class="icon ion-ios-undo">
     </ion-nav-back-button>
   </ion-nav-bar>
 
