--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
     <ion-nav-back-button class="icon ion-ios-undo">
     </ion-nav-back-button>
   </ion-nav-bar>
-
+  <!--<ion-view></ion-view>-->
   <ion-nav-view></ion-nav-view>
   </body>
 </html>
