微信聊天尚未完成

--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,14 @@
       <script src="js/controller/controller.js"></script>
       <script src="js/route/route.js"></script>
       <script src="js/service/service.js"></script>
-    <script src="js/service/tool.js"></script>
+      <script src="js/service/tool.js"></script>
+    <!--微信聊天-->
+
+      <script src="js/wechat/controllers.js"></script>
+      <script src="js/wechat/routes.js"></script>
+      <script src="js/wechat/services.js"></script>
+      <script src="js/wechat/directives.js"></script>
+      <script src="js/wechat/elastic.js"></script>
   </head>
 
   <body>
