微信聊天尚未完成,差不多了,还有friends界面,app的文件组织需要重新排列,以组件的形式排列app,而不能以mvc的形式排列app

--- a/www/index.html
+++ b/www/index.html
@@ -5,9 +5,10 @@
     <title>Sign-in, Then Tabs Example</title>
       <link href="lib/ionic/css/ionic.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
-      <link href="css/ionic.app.min.css"/>
+      <link href="css/ionic.app.min.css" rel="stylesheet"/>
       <link href="css/flex.sass" rel="stylesheet">
-      <link href="css/ionicons.min.css" />
+      <link href="css/ionicons.min.css"  rel="stylesheet"/>
+      <link href="css/wechat.css" rel="stylesheet"/>
       <script src="lib/ionic/js/ionic.bundle.min.js"></script>
       <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
       <script src="cordova.js"></script>
@@ -19,11 +20,12 @@
       <script src="js/service/tool.js"></script>
     <!--微信聊天-->
 
-      <script src="js/wechat/controllers.js"></script>
-      <script src="js/wechat/routes.js"></script>
+    <script src="js/wechat/routes.js"></script>
+    <script src="js/wechat/controllers.js"></script>
       <script src="js/wechat/services.js"></script>
       <script src="js/wechat/directives.js"></script>
       <script src="js/wechat/elastic.js"></script>
+
   </head>
 
   <body>
