--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,19 @@
       <link href="css/flex.sass" rel="stylesheet">
       <link href="css/ionicons.min.css"  rel="stylesheet"/>
       <link href="css/wechat.css" rel="stylesheet"/>
+    <!--bootstrap-->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+      <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+      <link href="http://s.goutong.baidu.com/embed/1467178857/asset/embed/css/pc/main.css" rel="stylesheet">
+      <link href="http://shsx.alvye.cn/statics/shixisheng/css/style.css" rel="stylesheet">
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+      <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
       <script src="lib/ionic/js/ionic.bundle.min.js"></script>
       <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
       <script src="cordova.js"></script>
