--- a/www/index.html
+++ b/www/index.html
@@ -5,9 +5,8 @@
 <!--html 跨域安全问题  http://stackoverflow.com/questions/30132885/ionic-app-cannot-connect-cors-enabled-server-with-http-->
     <meta http-equiv="Content-Security-Policy" content="default-src *;
  style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'
- 'unsafe-eval'"></meta>
-
-    <title>Sign-in, Then Tabs Example</title>
+ 'unsafe-eval'"/>
+      <title>Sign-in, Then Tabs Example</title>
       <link href="lib/ionic/css/ionic.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
       <link href="css/ionic.app.css" rel="stylesheet"/>
@@ -26,8 +25,8 @@
       <script src="js/service/tool.js"></script>
     <!--微信聊天-->
 
-    <script src="js/wechat/routes.js"></script>
-    <script src="js/wechat/controllers.js"></script>
+      <script src="js/wechat/routes.js"></script>
+      <script src="js/wechat/controllers.js"></script>
       <script src="js/wechat/services.js"></script>
       <script src="js/wechat/directives.js"></script>
       <script src="js/wechat/elastic.js"></script>
