--- a/www/index.html
+++ b/www/index.html
@@ -14,9 +14,9 @@
       <script src="cordova.js"></script>
 
       <script src="js/app/app.js"></script>
-      <script src="js/controller/controller.js"></script>
-      <script src="js/route/route.js"></script>
-      <script src="js/service/service.js"></script>
+      <script src="js/app/controller.js"></script>
+      <script src="js/app/route.js"></script>
+      <script src="js/app/service.js"></script>
       <script src="js/service/tool.js"></script>
     <!--微信聊天-->
     <script src="js/wechat/routes.js"></script>
