修改了package.json 配置文件,删除了不必要的额外包

--- a/www/index.html
+++ b/www/index.html
@@ -13,17 +13,7 @@
       <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
       <script src="cordova.js"></script>
 
-      <script src="js/app/app.js"></script>
-      <script src="js/app/controller.js"></script>
-      <script src="js/app/route.js"></script>
-      <script src="js/app/service.js"></script>
-      <script src="js/service/tool.js"></script>
-    <!--微信聊天-->
-    <script src="js/wechat/routes.js"></script>
-    <script src="js/wechat/controllers.js"></script>
-      <script src="js/wechat/services.js"></script>
-      <script src="js/wechat/directives.js"></script>
-      <script src="js/wechat/elastic.js"></script>
+    <script src="js/app.bundle.js"></script>
 
   </head>
 
