集成了sockit.io 放入框架,写法并不完美,有待改进

--- a/www/socket.html
+++ b/www/socket.html
@@ -31,7 +31,7 @@
 
     });
 
-    socket.on('chat message',function(msg){
+    socket.on('login',function(msg){
         $('#messages').append($('<li>').text(msg));
     })
 </script>
