socketio 本地聊天室

--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,8 @@
       <script src="lib/ionic/js/ionic.bundle.min.js"></script>
       <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
       <script src="cordova.js"></script>
-
-    <script src="js/app.bundle.js"></script>
+      <script src="lib/socket/socket.io.js"></script>
+      <script src="js/app.bundle.js"></script>
 
   </head>
 
