--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <title>Sign-in, Then Tabs Example</title>
       <link href="lib/ionic/css/ionic.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
-      <link href="css/ionic.app.min.css" rel="stylesheet"/>
+      <link href="css/ionic.app.css" rel="stylesheet"/>
       <link href="css/flex.sass" rel="stylesheet">
       <link href="css/ionicons.min.css"  rel="stylesheet"/>
       <link href="css/wechat.css" rel="stylesheet"/>
